fix: post actions overlap with separator

--- a/less/forum.less
+++ b/less/forum.less
@@ -28,9 +28,8 @@
   }
 }
 
-.Post::before,
 .Post::after {
-  content: none;
+  display: inline-table;
 }
 
 .davwheat-ad {
